final changes included

--- a/about-us.html
+++ b/about-us.html
@@ -23,7 +23,7 @@
                 </div>
             </container>
             <container class="about-section">
-                <p>KEF es un sueño compartido con nuestras familias, amigas, colegas y con toda la gente que, como nosotras, quiere un mundo más justo con todos los seres que habitamos en el.<br><br>
+                <p>KEF es un sueño compartido con nuestras familias, amigas, colegas y con toda la gente que, como nosotras, quiere un mundo más justo con todos los seres que habitamos en él.<br><br>
                 Todo empezó el 24 de septiembre de 2023, cuando abrimos las puertas de este espacio con el firme propósito de aportar a causas feministas y ecológicas en la ciudad. Desde entonces, no hemos parado de crecer ni de meterle ganas para hacer de Cali un lugar con más justicia ambiental y equidad de género.<br><br>
                 KEF nació cuando dos iniciativas independientes (Komoniu y Be Feminist) decidieron unir fuerzas. ¿Y quiénes estaban detrás? Pues dos hermanas caleñas con el firme convencimiento de que juntas llegamos más lejos, sobre todo cuando trabajamos por el cuidado de la vida. Desde entonces, nos hemos dedicado a educar, crear comunidad y poner en práctica la sostenibilidad, la economía circular, el amor por el planeta y, por supuesto, los feminismos.<br><br>
                 Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario). ¡Así que súmate a esta historia! KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
