--- a/activismo.html
+++ b/activismo.html
@@ -18,7 +18,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Activismo</h1>
-                    <p>Únete a nuestros programas de activismo social para impulsar un cambio significativo.</p>
+                    <p>Únete a nuestros programas de activismo social para impulsar un cambio significativo en la ciudad.</p>
                     <a href="contact-us.html" class="cta-button-activismo">Contáctanos</a>
                 </div>
             </div>
