--- a/blog.html
+++ b/blog.html
@@ -18,27 +18,35 @@
 
         <!-- Blog Filters -->
         <div class="blog-filters">
-            <label for="filter-topic">Filtrar por tema:</label>
-            <select id="filter-topic">
-                <option value="all">Todas las publicaciones</option>
-                <option value="activismo">Activismo</option>
-                <option value="formacion">Formación</option>
-                <option value="consumo">Colaboración</option>
-            </select>
+            <div class="blog-filter">
+                <label for="filter-topic">Filtrar por tema:</label>
+                <select id="filter-topic">
+                    <option value="all">Todas las publicaciones</option>
+                    <option value="activismo">Activismo</option>
+                    <option value="formacion">Formación</option>
+                    <option value="consumo">Colaboración</option>
+                </select>
+            </div>
 
-            <label for="filter-date">Filtrar por fecha:</label>
-            <input type="date" id="filter-date">
-
-            <label for="filter-keywords">Buscar por palabras clave:</label>
-            <input type="text" id="filter-keywords" placeholder="Escribe las palabras clave">
-
-            <label for="filter-comments">Filtrar por número de comentarios:</label>
-            <select id="filter-comments">
-                <option value="all">Todos</option>
-                <option value="0-10">0-10 Comentarios</option>
-                <option value="11-50">11-50 Comentarios</option>
-                <option value="50+">Más de 50 Comentarios</option>
-            </select>
+            <div class="blog-filter">
+                <label for="filter-date">Filtrar por fecha:</label>
+                <input type="date" id="filter-date">
+            </div>
+            
+            <div class="blog-filter">
+                <label for="filter-keywords">Buscar por palabras clave:</label>
+                <input type="text" id="filter-keywords" placeholder="Escribe las palabras clave">
+            </div>
+            
+            <div class="blog-filter">
+                <label for="filter-comments">Filtrar por número de comentarios:</label>
+                <select id="filter-comments">
+                    <option value="all">Todos</option>
+                    <option value="0-10">0-10 Comentarios</option>
+                    <option value="11-50">11-50 Comentarios</option>
+                    <option value="50+">Más de 50 Comentarios</option>
+                </select>
+            </div>
         </div>
 
         <!-- Blog Entries -->
@@ -47,7 +55,7 @@
             <div class="blog-entry" data-topic="activismo" data-date="2023-10-01" data-comments="30">
                 <h2><a href="/entrada1.html">La causa climática es un asunto de género</a></h2>
                 <p>"Nos seguimos chocando de frente con un muro de gobiernos negacionistas, que se han mostrado poco comprometidos con la causa climática"</p>
-                <p class="meta">Fecha: October 1, 2023 | Tiempo de Lectura: 5 min | Comentarios: 30</p>
+                <p class="meta">Fecha: Abril, 2023 | Tiempo de Lectura: 5 min | Autor(x): María Camila Hernández</p>
             </div>
             <!-- More blog entries here -->
         </div>
