--- a/consumo.html
+++ b/consumo.html
@@ -16,7 +16,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Colaboración</h1>
-                <p>Únete a nuestros programas de consumo para repensar nuestros hábitos diarios.</p>
+                <p>En KEF celebramos el poder de los vínculos entre mujeres, y por eso queremos visibilizar tu emprendimiento, nutrirlo y hacerlo crecer contigo.</p>
                 <a href="contact-us.html" class="cta-button-consumo">Contáctanos</a>
             </div>
         </div>
@@ -38,9 +38,9 @@
     </div>
     <!-- Blog CTA -->
     <section class="blog-cta">
-        <h2>Saber más sobre Colaboración</h2>
-        <p>Navega nuestras entradas sobre colaboración si quieres saber más o sumarte</p>
-        <a href="blog.html?topic=consumo" class="cta-button-consumo">Visita nuestro Blog</a>
+        <h2>¡Estas a punto de convertirte en una aliada KEF!</h2>
+        <p>Unirte a KEF como aliada es más que una colaboración: es un acto de confianza mutua, de construcción colectiva y de apuesta por un mundo más justo y amigable.</p>
+        <a href="blog.html?topic=consumo" class="cta-button-consumo">Hazte aliada</a>
     </section>
     
     <!-- Footer Section -->
