--- a/contact-us.html
+++ b/contact-us.html
@@ -16,12 +16,14 @@
             <div class="visitanos-container">
                 <div class="hero-visitanos">
                     <h1>Visítanos</h1>
-                    <p>Nuestra sede está ubicada en el corazón de Cali.</p>
+                    <p>Nuestra sede está ubicada en el corazón de Cali, donde las trompetas suenan y las montañas abrazan. <br><br></p>
                 </div>
 
                 <!-- Google Maps Embed -->
                 <div class="visit-map">
-                    <p>Av. 4 Norte #8 Norte-37, Granada, Cali, Valle del Cauca, Colombia</p>
+                    <p>Av. 4 Norte #8 Norte-37.
+                        <br>Local 108.
+                        <br>Cali, Col.</p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1820.1592157975886!2d-76.53744381370562!3d3.454043429954235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a66fc36a640d%3A0x6026132b68b07ada!2sAv.%204%20Nte.%20%238%20Norte-37%2C%20Granada%2C%20Cali%2C%20Valle%20del%20Cauca%2C%20Colombia!5e1!3m2!1sen!2sca!4v1729712396241!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
@@ -29,8 +31,9 @@
             <div class="contact-form-container">
                 <!-- Contact Section -->
                 <div class="contact-form">
-                    <h1>Queremos leerte!</h1>
-                    <p>Por favor escríbenos para cualquier duda que quieras aclarar o consulta que quieras hacer</p>
+                    <br><br>
+                    <h1>¡Queremos leerte!</h1>
+                    <p>Por favor escríbenos para cualquier duda que quieras aclarar o consulta que quieras hacer.</p>
                     <form action="/submit-form" method="POST" data-netlify="true" name="contactanos-form">
                         <label for="name">Nombre</label>
                         <input type="text" id="name" name="name" required>
