--- a/dona.html
+++ b/dona.html
@@ -41,7 +41,7 @@
                     <p>Dona ropa en excelente estado y/o útiles escolares a los <a class="juanchamigos" href="https://www.instagram.com/juanchamigoss">Juanchamigos</a></p>
                     <p>Anualmente y con el apoyo de la Fundación Huaitoto, Coral Resort y Plástico Precioso Uramba se realizan 2 jornadas de intercambio de ropa y útiles escolares por plástico reciclado de las playas de Juanchaco, Ladrilleros y la Barra.</p> 
                     <p>Súmate como voluntario o donante y haz esto posible.</p>
-                    <a href="financial-donations.html" class="cta-button">Más información</a>
+                    <a href="contact-us.html" class="cta-button">Más información</a>
                 </div>
             </div>
         </section>
