--- a/entrada1.html
+++ b/entrada1.html
@@ -21,16 +21,17 @@
       Frente a esto, y desde una lectura ecofeminista, es urgente resaltar el papel de las mujeres que, en las últimas décadas, han buscado estrategias para hacerle frente a la crisis sistémica global ocasionada por el agotamiento de los recursos, las tensiones geopolíticas y los extremos de la hegemonía mundial. Estrategias que, en su mayoría, no han ocurrido a través de transformaciones política tradicionales, sino a través de las luchas acuerpadas, de las resistencias colectivas y de la confrontación pacífica contra empresas, gobiernos e incluso actores armados.<br><br>
       Hoy, en el marco del 8M, la lucha por la equidad de género se entrelaza con la búsqueda de la justicia ambiental, una justicia que permita que las lideresas y activistas ambientales se sientan seguras, escuchadas y exaltadas. La organización WWF (2020) ya lo ha explicado en sus estudios: fortalecer los liderazgos femeninos puede reducir los daños ambientales, generando mayores escenarios de conservación de los recursos y más estrategias de gestión equitativa de los mismos. Así, la invitación es que en este 8M le apostemos a que más mujeres y niñas tengan más conocimiento, más herramientas y más espacios de liderazgo ambiental y político.
       </p>
-      <p class="referencias">
-        Referencias<br><br>
-        Amnistía Internacional (2025). La retirada de Estados Unidos del Acuerdo de París es irresponsable y corta de miras. Recuperado de: https://www.es.amnesty.org/en-que-estamos/noticias/noticia/articulo/la-retirada-de-estados-unidos-del-acuerdo-de-paris-es-irresponsable-y-corta-de-miras/<br><br>
-        
-        Antena 3 Noticias (2020). Greta Thunberg acusa a los líderes de haberse rendido ante el calentamiento global. Recuerdo de: https://www.antena3.com/noticias/mundo/greta-thunberg-y-donald-trump-inician-su-duelo-en9-davos_202001215e26f4720cf29283da0b0aac.html<br><br>
-        Climática (2024).De abrazar árboles a destruirlos.Recuperado de: https://climatica.coop/abrazar-arboles-destruirlos-chipko-obra/
-        La Nación (2025).Milei admitió ante un diario francés que analiza retirar a la Argentina del acuerdo de París. Recuperado de: https://www.lanacion.com.ar/politica/milei-admitio-ante-un-diario-frances-que-analiza-retirar-a-la-argentina-del-acuerdo-de-paris-nid05022025/<br><br>
-        Martín, J. (2024).  Agenda feminista Global ¿A qué agenda y qué retos plantea la agenda feminista global?
-        WWF (2022).Cómo la igualdad de género impacta la conservación de la naturaleza. Recuperado de : https://oficinasostenibilidad.uca.es/noticia/mujeres-en-la-lucha-por-el-cambio-climatico-movimiento-chipko/<br><br>
-      </p>
+      <div class="referencias">
+        <p>Referencias</p>
+        <ul>
+          <li>Amnistía Internacional (2025). La retirada de Estados Unidos del Acuerdo de París es irresponsable y corta de miras. Recuperado de: https://www.es.amnesty.org/en-que-estamos/noticias/noticia/articulo/la-retirada-de-estados-unidos-del-acuerdo-de-paris-es-irresponsable-y-corta-de-miras/</li>
+          <li>Antena 3 Noticias (2020). Greta Thunberg acusa a los líderes de haberse rendido ante el calentamiento global. Recuperado de: https://www.antena3.com/noticias/mundo/greta-thunberg-y-donald-trump-inician-su-duelo-en9-davos_202001215e26f4720cf29283da0b0aac.html</li>
+          <li>Climática (2024).De abrazar árboles a destruirlos.Recuperado de: https://climatica.coop/abrazar-arboles-destruirlos-chipko-obra/</li>
+          <li>La Nación (2025).Milei admitió ante un diario francés que analiza retirar a la Argentina del acuerdo de París. Recuperado de: https://www.lanacion.com.ar/politica/milei-admitio-ante-un-diario-frances-que-analiza-retirar-a-la-argentina-del-acuerdo-de-paris-nid05022025/</li>
+          <li>Martín, J. (2024).  Agenda feminista Global ¿A qué agenda y qué retos plantea la agenda feminista global?</li>
+          <li>WWF (2022).Cómo la igualdad de género impacta la conservación de la naturaleza. Recuperado de : https://oficinasostenibilidad.uca.es/noticia/mujeres-en-la-lucha-por-el-cambio-climatico-movimiento-chipko/</li>
+        </ul>
+      </div>
     </container>
   <div id="footer-placeholder"></div>
 </body> 
