--- a/eventos.html
+++ b/eventos.html
@@ -11,15 +11,12 @@
     <script src="js/calendar.js" defer></script>
 </head>
 <body>
-
     <div id="header-placeholder"></div>
     <!-- Calendar Section -->
     <section id="calendar-container">
-        <h1>Próximos eventos</h1>
+        <h1>Eventos</h1>
         <div id="calendar-grid"></div>
     </section>
-
     <div id="footer-placeholder"></div>
-
 </body>
 </html>
