--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,8 @@
     <div class="footer-content">
         <!-- Left: Contact Info -->
         <div class="footer-contact">
-            <p>Contacto: info@kef.org</p>
-            <p>Teléfono: +57 123 456 7890</p>
+            <p>Contacto: kef.comunidadecofeminista@gmail.com</p>
+            <p>Teléfono: +57 3146127414</p>
         </div>
 
         <!-- Center: Copyrights -->
@@ -13,20 +13,11 @@
 
         <!-- Right: Social Media Icons -->
         <div class="footer-social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="assets/icons/facebook-icon.svg" alt="Facebook">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="assets/icons/x-icon.svg" alt="Twitter">
-            </a>
-            <a href="https://instagram.com" target="_blank">
+            <a href="https://www.instagram.com/comunidad_kef/" target="_blank">
                 <img src="assets/icons/instagram-icon.svg" alt="Instagram">
             </a>
-            <a href="https://youtube.com" target="_blank">
-                <img src="assets/icons/youtube-icon.svg" alt="YouTube">
-            </a>
-            <a href="https://tiktok.com" target="_blank">
-                <img src="assets/icons/tiktok-icon.svg" alt="YouTube">
+            <a href="https://www.tiktok.com/@kef.cali" target="_blank">
+                <img src="assets/icons/tiktok-icon.svg" alt="TikTok">
             </a>
         </div>
     </div>
