--- a/index.html
+++ b/index.html
@@ -37,23 +37,11 @@
                             </div>
                             <div class="main-hero-social-container">
                                 <div class="footer-social social-hero">
-                                    <a href="https://facebook.com" target="_blank">
-                                        <img src="assets/icons/facebook-icon.svg" alt="Facebook">
-                                    </a>
-                                    <a href="https://spotify.com" target="_blank">
-                                        <img src="assets/icons/spotify-icon.svg" alt="YouTube">
-                                    </a>
-                                    <a href="https://twitter.com" target="_blank">
-                                        <img src="assets/icons/x-icon.svg" alt="Twitter">
-                                    </a>
-                                    <a href="https://instagram.com" target="_blank">
+                                    <a href="https://www.instagram.com/comunidad_kef/" target="_blank">
                                         <img src="assets/icons/instagram-icon.svg" alt="Instagram">
                                     </a>
-                                    <a href="https://youtube.com" target="_blank">
-                                        <img src="assets/icons/youtube-icon.svg" alt="YouTube">
-                                    </a>
-                                    <a href="https://tiktok.com" target="_blank">
-                                        <img src="assets/icons/tiktok-icon.svg" alt="YouTube">
+                                    <a href="https://www.tiktok.com/@kef.cali" target="_blank">
+                                        <img src="assets/icons/tiktok-icon.svg" alt="TikTok">
                                     </a>
                                 </div>
                             </div>
@@ -106,7 +94,7 @@
                         <!-- Formación Card -->
                         <a href="formacion.html">
                         <div class="card formacion">
-                            <h3>Educación</h3>
+                            <h3>Formación</h3>
                             <p>Creemos que el conocimiento es poder, por eso organizamos talleres, charlas, encuentros y espacios de aprendizaje sobre equidad de género, justicia ambiental, sostenibilidad y economía circular. Queremos que más personas se sumen a esta conversación y se sientan parte del cambio.</p>
                         </div>
                         </a>
@@ -135,7 +123,7 @@
                     <!-- Left Side: Text and CTA -->
                     <div class="conocenos-text">
                         <h2>Conócenos</h2>
-                        <p>Todo empezó el 24 de septiembre de 2023, cuando abrimos las puertas de este espacio con el firme propósito de aportar a causas feministas y ecológicas en la ciudad</p>
+                        <p>Todo empezó el 24 de septiembre de 2023, cuando abrimos las puertas de este espacio con el firme propósito de aportar a causas feministas y ecológicas en la ciudad.</p>
                         <p>Desde entonces, no hemos parado de crecer ni de meterle ganas para hacer de Cali un lugar con más justicia ambiental y equidad de género.</p>
                         <a href="about-us.html" class="cta-button">Más Info</a>
                     </div>
