--- a/sumate.html
+++ b/sumate.html
@@ -15,7 +15,7 @@
     <!-- Hero Section -->
     <section class="hero-sumate">
         <h1>Súmate a nuestra comunidad</h1>
-        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad. Trabajamos en tres líneas de acción: Activismo, Formación e Intervención, y Colaboración.</p>
+        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad. <br><br> Trabajamos en tres líneas de acción: <a class="enlace-activismo">Activismo</a>, <a class="enlace-formacion">Formación e Intervención</a>, y <a class="enlace-colaboracion">Colaboración</a>.</p>
     </section>
     <!-- Activismo Section -->
     <section class="line-of-work">
@@ -26,10 +26,10 @@
         </container>
         <div class="line-of-work-card activismo">
             <h2>Activismo</h2>
-            <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación y defensa de los derechos humanos.</p>
+            <p>Al unirte, coordinarás y participarás en actividades de movilización, concientización y defensa de los derechos humanos.</p>
             <p><strong>Actividades:</strong> Marchas, intervenciones urbanas, acciones simbólicas y campañas.</p>
-            <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la sensibilización ciudadana a través de acciones colectivas.</p>
-            <a href="activismo.html" class="cta-button" style="background-color: #D9A9FB;">Más sobre Activismo</a>
+            <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la sensibilización ciudadana mediante acciones colectivas.</p>
+            <a href="activismo.html" class="cta-button" style="background-color: #a32ff6;">Más sobre Activismo</a>
         </div>
     </section>
     <!-- Formación e Intervención Section -->
@@ -41,10 +41,10 @@
         </container>
         <div class="line-of-work-card formacion">
             <h2>Formación</h2>
-            <p>Formar a la próxima generación de líderes sociales y realizar intervenciones directas en comunidades es parte fundamental de nuestra misión. Al unirte, coordinarás talleres, capacitaciones, y programas de intervención.</p>
+            <p>Formar a la próxima generación de lideresas y realizar intervenciones en comunidades es parte fundamental de nuestra misión. Al unirte, participarás en talleres, capacitaciones, y programas de intervención.</p>
             <p><strong>Actividades:</strong> Talleres, charlas, encuentros y espacios de aprendizaje con las comunidades.</p>
             <p><strong>Foco principal:</strong> Desarrollar herramientas y estrategias formativas que impulsen la equidad de género y la justicia ambiental.</p>
-            <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Educación</a>
+            <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Formación</a>
         </div>
     </section>
 
@@ -67,7 +67,7 @@
     <!-- Join Us CTA Section -->
     <section class="join-cta">
         <h2>¿Listx para sumarte?</h2>
-        <p>Si estás interesado en unirte a alguna de nuestras líneas de acción, completa el formulario y nos pondremos en contacto contigo.</p>
+        <p>Si estás interesadx en unirte a alguna de nuestras líneas de acción, completa el formulario y nos pondremos en contacto contigo.</p>
         <a href="contact-us.html" class="cta-button">Súmate ahora</a>
     </section>
 
