links and text spacings fixed

--- a/consumo.html
+++ b/consumo.html
@@ -40,7 +40,7 @@
     <section class="blog-cta">
         <h2>¡Estas a punto de convertirte en una aliada KEF!</h2>
         <p>Unirte a KEF como aliada es más que una colaboración: es un acto de confianza mutua, de construcción colectiva y de apuesta por un mundo más justo y amigable.</p>
-        <a href="blog.html?topic=consumo" class="cta-button-consumo">Hazte aliada</a>
+        <a href="https://wa.me/message/IZQYCEJ6KJ4BN1" class="cta-button-consumo">Hazte aliada</a>
     </section>
     
     <!-- Footer Section -->
