--- a/formacion.html
+++ b/formacion.html
@@ -16,7 +16,7 @@
     <!-- Hero Section -->
     <section class="hero-formacion">
         <div class="hero-content">
-            <div class="hero-text">
+            <div class="hero-text formacion">
                 <h1>Formación</h1>
                 <p>Únete a nuestros programas de formación para aprender, conocer y explorar lo que nos mueve.</p>
                 <a href="contact-us.html" class="cta-button-formacion" style="margin: 1rem 0;"> Contáctanos</a>
