cambios agregados hasta Mayo 17

--- a/activismo.html
+++ b/activismo.html
@@ -32,7 +32,9 @@
         <!-- Modal for Expanded Image -->
         <div id="image-modal" class="modal">
             <span class="close">&times;</span>
+            <span class="nav-arrow left-arrow">&#10094;</span> <!-- ← -->
             <img class="modal-content" id="expanded-img">
+            <span class="nav-arrow right-arrow">&#10095;</span>
         </div>
         <!-- Blog CTA Section -->
         <div class="blog-cta">
