--- a/consumo.html
+++ b/consumo.html
@@ -22,6 +22,12 @@
         </div>
     </section>
     <div class="colaboracion-section">
+        <h1>¿Qué significa ser un emprendimiento aliado KEF?</h1>
+        <p>
+        ✨ Estar liderado y/o creado por mujeres colombianas.<br><br>
+        ✨ Los productos son elaborados a pequeña escala y mediante procesos artesanales.<br><br>
+        ✨ Cada producto tiene un propósito transformador —social, ambiental y/o de género—.
+        </p>
         <h1>Nuestras Aliadas</h1>
         <div class="logo-container">
             <div class="logo"><img src="/assets/LogosAliadas/Ecolunas sin fondo.png" alt="Logo 1"></div>
@@ -29,11 +35,12 @@
             <div class="logo"><img src="/assets/LogosAliadas/LOGO AUDE.png" alt="Logo 5"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo de Féminas Iustradas.png" alt="Logo 6"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo De.Lu.jpeg" alt="Logo 7"></div>
-            <div class="logo"><img src="/assets/LogosAliadas/Logo Hilando Historias.jpeg" alt="Logo 9"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo Hilando Historias.jpg" alt="Logo 9"></div>
             <div class="logo"><img src="/assets/LogosAliadas/LOGO HÜAITOTO FOUNDATION_BLANCO TRANSPARENTE.png" alt="Logo 10"></div>
             <div class="logo"><img src="/assets/LogosAliadas/LOGO SENTIRES DE LUNA .jpeg" alt="Logo 12"></div>
             <div class="logo"><img src="/assets/LogosAliadas/Logo Tropico Negro.png" alt="Logo 13"></div>
             <div class="logo"><img src="/assets/LogosAliadas/LOGOS ARHUACA_page-0001.jpg" alt="Logo 14"></div>
+            <div class="logo"><img src="/assets/LogosAliadas/Logo Mi Cuerpo Min Krop.jpeg" alt="Logo 15"></div>
         </div>    
     </div>
     <!-- Blog CTA -->
