--- a/dona.html
+++ b/dona.html
@@ -25,6 +25,9 @@
                 <div class="donations-text">
                     <h2>Productos KEF</h2>
                     <p>No hay nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas.</p>
+                    <div class="donations-image">
+                        <img src="/assets/images/Equipo KEF/EquipoKEF.jpeg">
+                    </div>
                     <p>Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social, ambiental y de género.</p>
                     <p>Adquiere los productos KEF en nuestro <a href="/contact-us.html" class="tienda-kef-link">punto físico</a> o tienda virtual.</p>
                     <a href="https://www.instagram.com/tienda_kef/" class="cta-button tienda-kef">Tienda KEF</a>
