--- a/formacion.html
+++ b/formacion.html
@@ -28,9 +28,7 @@
 
     <!-- Blog CTA -->
     <section class="blog-cta">
-        <h2>Saber más sobre Formación</h2>
-        <p>Explora nuestras entradas sobre Formación para actualizarte.</p>
-        <a href="blog.html?topic=formacion" class="cta-button-formacion">Ir al Blog - Educación</a>
+        <a href="blog.html?topic=formacion" class="cta-button-formacion">Saber Más</a>
     </section>
 
     <!-- Footer Section -->
