main changes applied-may 18

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
                         <!-- Bottom: Image or Design -->
                             <div>
-                                <img src="assets/8M-2025.jpeg" alt="Hero Image">
+                                <img src="assets/images/Equipo KEF/EquipoKEF-2.jpeg" alt="Hero Image">
                             </div>
                         </section>
                         <div class="main-hero-text second-text">
@@ -112,7 +112,7 @@
                     <p><a href="sumate.html">¡Súmate a KEF y hagamos historia!</a></p>
                 </div>
                 <div>
-                    <img src="assets/images/circuloSiembra.jpg" alt="KEF Team Image">
+                    <img src="assets/8M-2025.jpeg" alt="KEF Team Image">
                 </div>
 
             </div>
