changes until may 22

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>En KEF trabajamos para construir un mundo más justo desde el ecofeminismo. Nuestra apuesta se basa en educación, activismo y colaboración, tres pilares que nos permiten transformar realidades desde lo colectivo.</p>
                 </div>
                 <!-- Carousel Section -->
-                <div class="card-container">
+                <div class="card-container landing">
                     <section class="full-section-wrapper" z-index="40">
                         <!-- Activismo Card -->
                         <a href="activismo.html">
