--- a/sumate.html
+++ b/sumate.html
@@ -15,7 +15,7 @@
     <!-- Hero Section -->
     <section class="hero-sumate">
         <h1>Súmate a nuestra comunidad</h1>
-        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad. <br><br> Trabajamos en tres líneas de acción: <a class="enlace-activismo">Activismo</a>, <a class="enlace-formacion">Formación e Intervención</a>, y <a class="enlace-colaboracion">Colaboración</a>.</p>
+        <p>Únete a nuestras iniciativas para generar un impacto real en la sociedad. <br>Trabajamos en tres líneas de acción: <a class="enlace-activismo">Activismo</a>, <a class="enlace-formacion">Formación e Intervención</a>, y <a class="enlace-colaboracion">Colaboración</a>.</p>
     </section>
     <!-- Activismo Section -->
     <section class="line-of-work">
